duniverse/menhirLib.20200211/test/static/bad/location-keyword-errors.mly
%token <int> A
%token B C

%%

main:
  x = A; y = B
    { $startpos(z) }
| A
    { $endpos($2) }

