duniverse/menhirLib.20200211/test/static/bad/location-keyword-errors.exp
File "location-keyword-errors.mly", line 8, characters 6-18:
Error: z refers to a nonexistent symbol.
